--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -23,7 +23,7 @@
    
   </ion-header>
 
-<ion-content class="ion-padding" >
+<ion-content overflow-scroll="true" class="ion-padding" >
   <!-- [ngStyle]="{ background-image: background_image }" -->
   <!-- [ngStyle]="{'background-image': 'url(' + background_image + ')'}" -->
   <!-- <div [ngStyle]="{'background-image': ' url(' + imageUrl  + ') no-repeat 0 0'}" >
