--- a/front-end/src/app/pages/register/register.page.scss
+++ b/front-end/src/app/pages/register/register.page.scss
@@ -46,3 +46,8 @@ ion-button{
         box-shadow: 0 6px 4px -4px var(--ion-color-medium);
 
 }
+
+ion-text{
+    font-size: 0.8rem;
+        padding-left: 5vw;
+}
