--- a/front-end/src/app/pages/member-action/member-action.page.scss
+++ b/front-end/src/app/pages/member-action/member-action.page.scss
@@ -130,7 +130,8 @@ ion-content{
 
   .div-0 {
          
-    background: transparent;      
+    // background: transparent; 
+    background-color:var(--ion-color-light);     
     
     margin-top:5px;
     margin-right: 10px;
