--- a/front-end/src/app/pages/register/register.page.scss
+++ b/front-end/src/app/pages/register/register.page.scss
@@ -51,3 +51,17 @@ ion-text{
     font-size: 0.8rem;
         padding-left: 5vw;
 }
+
+// to set spinner in center 
+.spin{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+ }
+ ion-spinner {
+    width: 28px;
+    height: 28px;
+    stroke: #444;
+    fill: #222;
+ }
