--- a/front-end/src/app/pages/gym-add/gym-add.page.html
+++ b/front-end/src/app/pages/gym-add/gym-add.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="gyminformation()" color="strong">Back</ion-button>
+      <ion-button   (click)="gyminformation()"  color="strong">Back</ion-button>
     </ion-buttons>
-    <ion-title class="ios title-ios hydrated">Add Gym Information</ion-title>
+    <ion-title class="ios title-ios hydrated">Add Gym</ion-title>
   </ion-toolbar>
 </ion-header>
 
