--- a/front-end/src/app/pages/infor/infor.page.scss
+++ b/front-end/src/app/pages/infor/infor.page.scss
@@ -3,98 +3,17 @@
     overflow: hidden;
     }
 
-   
-
-    // ion-item::part(native) {
-    //     background: #19422d;
-    //     color: #fff;
-      
-    //     border-color: #fff;
-    //     border-style: dashed;
-    //     border-width: 2px;
-      
-    //     border-radius: 20px;
-    //   }
-      
-    //   ion-item::part(detail-icon) {
-    //     color: white;
-    //     opacity: 1;
-    //     font-size: 20px;
-    //   }
-
-    .div-1 {
-         
-        background: #c7c7d3;
-          
-        
-        margin-top:40px;
-        margin-right: 10px;
-        margin-left: 10px;
-
-        padding-top:20px;
-        padding-right: 5px;
-        padding-left: 5px;
-
-        border-radius: 20px;
-        border: 0.1px solid #000000;
-        min-height: 500px; 
-      }
-
-      .ion-item-1 {
-            padding-top:10px;
-        --margin-top: -11px; 
-        --background: #c9ccda;
-        // --color: #0c0f27;
-         
-        // --top-padding: 5px;
-        // --width: 180px;
-        --min-height: 140px; 
-      
-        // --border-color: #fff;
-        // --border-style: solid;
-        // --border-width: 0.2px;
-
-        // --border-radius: 15px;
-        // --border: 0.2px solid #969696;
-      
-        
-      
-        --ripple-color: rgb(230, 214, 230);
-      
-        --detail-icon-color: white;
-        --detail-icon-opacity: 1;
-        --detail-icon-font-size: 40px;
-      }
-
-      .ion-item-0 {
-        padding-top:10px;
-        margin-top: 5px; 
-        background: transparent;
-        min-height: 240px; 
-  
-    // --border-color: #fff;
-    // --border-style: solid;
-    // --border-width: 0.2px;
-
-    // --border-radius: 15px;
-    // --border: 0.2px solid #969696;
-  
-    
-  
-    // --ripple-color: rgb(230, 214, 230);
-  
-    --detail-icon-color: white;
-    --detail-icon-opacity: 1;
-    --detail-icon-font-size: 50px;
+    ion-content {
+      background: #c7c7d3;
+  >ion-refresher {
+    >ion-refresher-content {
+    }
   }
-
-  .div-0 {
-         
-    background: transparent;      
-    
-    margin-top:5px;
+  >div.div-0{          
+    margin-top:4x;
     margin-right: 10px;
     margin-left: 10px;
+    margin-bottom: 3px;
 
     padding-top:5px;
     padding-right: 5px;
@@ -102,6 +21,52 @@
     padding-bottom: 10px;
 
     border-radius: 20px;
-    border: 0.1px solid #8a8a8a;
-    min-height: 100px; 
+    border: 0.1px solid #000000;
+    min-height: 50px; 
+    >ion-label {
+      >h2 {
+        >strong {
+        }
+      }
+    }     
+      >ion-list {
+        margin-top: 0.1vh;
+        ion-list-header {
+            font-weight: 1000;
+            font-size: 1.5rem;
+        }
+        ion-item {
+          --min-height: 6px;
+          ion-label {
+                    >h2 {
+                      font-size: 1rem;
+                      font-weight: 400;
+                      padding-left: 5vw;
+                    }
+               }
+          
+        }
+            
+      }    
   }
+ 
+}
+   
+
+  // .div-0 {
+         
+  //   background: transparent;      
+    
+  //   margin-top:5px;
+  //   margin-right: 10px;
+  //   margin-left: 10px;
+
+  //   // padding-top:5px;
+  //   // padding-right: 5px;
+  //   // padding-left: 5px;
+    
+
+  //   // border-radius: 20px;
+  //   // border: 0.1px solid #8a8a8a;
+  //   // min-height: 100px; 
+  // }
