--- a/front-end/src/app/pages/member-action/member-action.page.html
+++ b/front-end/src/app/pages/member-action/member-action.page.html
@@ -31,7 +31,7 @@
             class="ion-text-center"
             expand="block"
             class="ion-margin"
-            (click)="attendance()"
+            (click)="startScan()"
             shape="round"
             >Tap to Scan </ion-button>
          
