--- a/front-end/src/app/pages/register/register.page.html
+++ b/front-end/src/app/pages/register/register.page.html
@@ -112,7 +112,13 @@
 </div>
   <p class="ion-text-center" *ngIf="isLoading"> <ion-spinner></ion-spinner> </p>
   
-  <ion-text color="medium">  <p class="ion-margin-horizontal"> <strong routerLink="/login"><ion-icon name="chevron-back"></ion-icon> Back to Login</strong></p></ion-text>
+  <ion-text color="medium">  
+    <p class="ion-margin-horizontal"> 
+      <strong routerLink="/login">
+        <ion-icon name="chevron-back"></ion-icon> 
+        Back to Login</strong>
+      </p>
+    </ion-text>
 
  
 
