--- a/front-end/src/app/pages/infor/infor.page.html
+++ b/front-end/src/app/pages/infor/infor.page.html
@@ -37,7 +37,7 @@ class="ion-no-border"
   
   <div class="div-0">
     <ion-label color="dark"> <h2><strong>Report</strong></h2> </ion-label>   
-      <ion-item >        
+          
         <ion-list>          
             <ion-item>
               <ion-label color="dark"><h2>Total Members :- {{totalMembers}} Persons</h2> </ion-label>
@@ -59,13 +59,13 @@ class="ion-no-border"
               <ion-toggle justify="space-between" aria-label="primary" color="primary" [checked]="true">Set Reminder(7 days)</ion-toggle>               
             </ion-item>
           
-          
+<!--           
             <ion-item href="#"> 
               <ion-label color="dark"><h2>Download Data (CSV format)</h2> </ion-label>
-            </ion-item>
+            </ion-item> -->
           
         </ion-list> 
-      </ion-item> 
+     
   </div>
 
   <div class="div-0">
@@ -95,7 +95,7 @@ class="ion-no-border"
   </div>
   
   <div class="div-0">
-    <ion-label color="dark"><h2><strong>Gym Setup ...under development..</strong></h2></ion-label>
+    <ion-label color="dark"><h2><strong>Gym Setup</strong></h2></ion-label>
     <ion-list>
           <ion-item detail="true" (click)="addmoregym()" >
             <ion-label color="dark"> <h2 >Add More Gym. </h2> </ion-label>
@@ -115,9 +115,9 @@ class="ion-no-border"
        if here gift point allowed then in Validity page add one more input filed to enter gift point 
       and based on those points increase end date in DB. -->
 
-          <ion-item detail="true">
+          <!-- <ion-item detail="true">
             <ion-label color="dark"><h2>Invite Additional Admin</h2></ion-label>
-          </ion-item>
+          </ion-item> -->
     </ion-list>
   </div>
   
