--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -1,29 +1,41 @@
-  <ion-header>
-   
-    <ion-item>      
-      <ion-select 
-        aria-label="Gym"
-        placeholder="Select Gym"      
-        (ionChange)="selecthandleChange($event)"
-        [compareWith]="compareWith" value="{{MyDefaultGymValue}}"              
-        slot="end">
-     
-          <ion-select-option *ngFor="let gym of gyms" value="{{gym._id}}"> {{gym.gym_name | uppercase}}</ion-select-option>
-          
-      </ion-select>
-    </ion-item>
-    <ion-searchbar         
-        placeholder ='Search Member'
-        [(ngModel)]="searchText"
-        showCancelButton="focus"
-        (ionChange)="onSearchTextEntered($event)"
-        animated   
-        >    
-    </ion-searchbar> 
-   
-  </ion-header>
+  <ion-searchbar         
+      placeholder ='Search Member'
+      [(ngModel)]="searchText"
+      showCancelButton="focus"
+      (ionChange)="onSearchTextEntered($event)"
+      animated   
+      >    
+</ion-searchbar> 
 
-<ion-content overflow-scroll="true" class="ion-padding" >
+<ion-content overflow-scroll="true" class="ion-padding" > 
+
+<ion-fab class="ion-fab-1" slot="fixed" vertical="top" horizontal="end" [edge]="true">
+  <ion-fab-button 
+      
+      (click)="autoShowItem()"
+      appGesture
+      [gestureOpts]="[{name: 'press'}]"
+      (press)="onPress($event)">
+    <ion-icon name='lock-open'></ion-icon>
+  </ion-fab-button>
+</ion-fab>
+
+  <ion-item *ngIf = "isItemShown"> 
+    <ion-select       
+      #selectElem
+      interface="action-sheet"
+      Open="false"
+      mode="ios"
+      justify="start"
+      aria-label="Gym"
+      placeholder="Select Gym"      
+      (ionChange)="selecthandleChange($event)"
+      [compareWith]="compareWith" value="{{MyDefaultGymValue}}"              
+      slot="end">   
+        <ion-select-option 
+          *ngFor="let gym of gyms" value="{{gym._id}}"> {{gym.gym_name | uppercase}}</ion-select-option>        
+    </ion-select>
+  </ion-item>
   <!-- [ngStyle]="{ background-image: background_image }" -->
   <!-- [ngStyle]="{'background-image': 'url(' + background_image + ')'}" -->
   <!-- <div [ngStyle]="{'background-image': ' url(' + imageUrl  + ') no-repeat 0 0'}" >
@@ -33,12 +45,6 @@
   <div>
     <app-banner [slides]="members_slides"></app-banner>
   </div>
-
-  <ion-fab class="ion-fab-1" slot="fixed" vertical="top" horizontal="end" [edge]="true">
-    <ion-fab-button (click)="openLock()">
-      <ion-icon name='lock-open'></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
 
    
         <ion-refresher slot="fixed" (ionRefresh)="handleRefresh($event)">
@@ -57,7 +63,7 @@
                  </ion-thumbnail>  
                   <ion-label>
                     <ion-note color="dark"><b>{{m.m_name | titlecase}}</b></ion-note>
-                      <p class="ion-text-wrap"><ion-badge>{{m.memberType}}</ion-badge></p>
+                      
                       <p>
                         <ion-text color="dark" (click)="CallTel(m.mobile)"><ion-icon name="call"></ion-icon>{{m.mobile}}</ion-text>
                         <ion-text color="dark"><br> <ion-icon name="calendar"></ion-icon> Last Date:{{m.m_enddate | date }}</ion-text>
@@ -86,11 +92,14 @@
      </ion-list>
 
 
-    <ion-fab class=".ion-fab-2" vertical="bottom" horizontal="center" slot="fixed">
-      <ion-fab-button (click)="addProduct()" >
+    <ion-fab class=".ion-fab-2" slot="fixed" vertical="top" horizontal="start" [edge]="true">
+      <ion-fab-button 
+      (click)="addProduct()"
+       >
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
     </ion-fab>  
+<!--  -->
 
 
 </ion-content>
