--- a/front-end/src/app/pages/member-add/member-add.page.html
+++ b/front-end/src/app/pages/member-add/member-add.page.html
@@ -46,7 +46,7 @@
         </ion-input>
       </ion-item>
 
-      <ion-item>
+      <!-- <ion-item>
         <ion-input 
         label="Aadhar(Optional)" 
         position="floating"
@@ -56,7 +56,7 @@
             
            required>
         </ion-input>
-      </ion-item>
+      </ion-item> -->
 
      
       <ion-item>
@@ -125,7 +125,7 @@
           type="submit" 
           [disabled]="!memberForm.valid" 
           color="primary" 
-          shape="full" 
+          shape="round" 
           expand="block">
         Save 
         </ion-button>
