--- a/front-end/src/app/pages/member-details/member-details.page.html
+++ b/front-end/src/app/pages/member-details/member-details.page.html
@@ -51,7 +51,7 @@
 
     
          
-      <ion-button expand="block" (click)="editMember(member._id)">
+      <ion-button shape="round" expand="block" (click)="editMember(member._id)">
         <ion-icon slot="icon-only" name="create"></ion-icon> EDIT
       </ion-button>   
 
@@ -64,7 +64,7 @@
 <ion-footer [translucent]="true">
   <ion-toolbar>
     <!-- <ion-title>Footer</ion-title> -->
-    <ion-button expand="block" fill="outline" (click)="AddMore()">
+    <ion-button shape="round" expand="block" fill="outline" (click)="AddMore()">
       <ion-icon slot="end" name="chevron-forward-outline"></ion-icon> <strong> Add More Members</strong>
     </ion-button>
   </ion-toolbar>
