--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -1,18 +1,35 @@
-  <ion-searchbar         
+<ion-searchbar         
       placeholder ='Search Member'
-      [(ngModel)]="searchText"
-      showCancelButton="focus"
-      (ionChange)="onSearchTextEntered($event)"
+      animated="true"
+      [debounce]="1000" 
+      (ionInput)="handleInput($event)"
+     
+
       animated   
       >    
 </ion-searchbar> 
 
+
+  <ion-select       
+    #selectElem
+    interface="action-sheet"
+    Open="false"
+    mode="ios"
+    justify="start"
+    aria-label="Gym"
+    placeholder="Select Gym"      
+    (ionChange)="selecthandleChange($event)"
+    [compareWith]="compareWith" value="{{MyDefaultGymValue}}"              
+    slot="end">   
+      <ion-select-option 
+        *ngFor="let gym of gyms" value="{{gym._id}}"> {{gym.gym_name | uppercase}}</ion-select-option>        
+  </ion-select>
+<!-- </ion-item> -->
+
 <ion-content overflow-scroll="true" class="ion-padding" > 
 
-<ion-fab class=".ion-fab-2" slot="fixed" vertical="top" horizontal="start" [edge]="true">
+<ion-fab class=".ion-fab-1" slot="fixed" vertical="top" horizontal="start" [edge]="true">
   <ion-fab-button 
-      
-      (click)="autoShowItem()"
       appGesture
       [gestureOpts]="[{name: 'press'}]"
       (press)="onPress($event)">
@@ -22,29 +39,13 @@
 
 <ion-fab class="ion-fab-1" slot="fixed" vertical="top" horizontal="end" [edge]="true">
   <ion-fab-button 
-  (click)="addProduct()"
-   >
+  (click)="addProduct()"   >
     <ion-icon name="add"></ion-icon>
   </ion-fab-button>
 </ion-fab>  
 
 
-  <ion-item class="itemSelect" *ngIf = "isItemShown"> 
-    <ion-select       
-      #selectElem
-      interface="action-sheet"
-      Open="false"
-      mode="ios"
-      justify="start"
-      aria-label="Gym"
-      placeholder="Select Gym"      
-      (ionChange)="selecthandleChange($event)"
-      [compareWith]="compareWith" value="{{MyDefaultGymValue}}"              
-      slot="end">   
-        <ion-select-option 
-          *ngFor="let gym of gyms" value="{{gym._id}}"> {{gym.gym_name | uppercase}}</ion-select-option>        
-    </ion-select>
-  </ion-item>
+  
   <!-- [ngStyle]="{ background-image: background_image }" -->
   <!-- [ngStyle]="{'background-image': 'url(' + background_image + ')'}" -->
   <!-- <div [ngStyle]="{'background-image': ' url(' + imageUrl  + ') no-repeat 0 0'}" >
@@ -78,12 +79,8 @@
                         <ion-text color="dark"><br> <ion-icon name="calendar"></ion-icon> Last Date:{{m.m_enddate | date }}</ion-text>
                       </p>                  
                   </ion-label> 
-                  <ion-fab vertical="top" horizontal="end">
-                    <ion-fab-button debounceTime="700" (click)="presentModal(m._id)" size="small" color="secondary">
-                      <img [src]=""/>
-                    </ion-fab-button>
-                  </ion-fab> 
-                  
+                         <ion-icon class="ion-icon" slot="end" name="ellipsis-vertical-outline" debounceTime="700" (click)="presentModal(m._id)"></ion-icon>
+                     
                      </ion-item>          
 
             <!-- <ion-col debounceTime="700" (click)="presentModal(m._id)" size="1" [ngClass]="+m.m_enddate < today_ ? 'div-vertical-red' : 'div-vertical-green'">
